--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -5,11 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="using:ScreenlyManager"
+    xmlns:converter="using:ScreenlyManager.Converters"
     mc:Ignorable="d">
 
     <Page.Resources>
-        <local:XamlConverters x:Key="ColorConverter"/>
-        <local:XamlConverters x:Key="MimetypeConverter"/>
+        <converter:StatusConverter x:Key="ColorConverter"/>
+        <converter:MimeTypeConverter x:Key="MimetypeConverter"/>
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
