--- a/AddOrChangeDevicePage.xaml
+++ b/AddOrChangeDevicePage.xaml
@@ -23,6 +23,8 @@
                 <TextBox x:Uid="AddDeviceIpTextBox" x:Name="TextBoxIp" Margin="20,2"  MaxLength="30" PlaceholderText="" />
                 <TextBlock x:Uid="AddDevicePort" Text="" HorizontalAlignment="Left" Margin="20, 20, 20, 2" />
                 <TextBox x:Uid="AddDevicePortTextBox" x:Name="TextBoxPort" Margin="20, 2" MaxLength="5" PlaceholderText="" InputScope="Number" />
+                <TextBlock x:Uid="AddDeviceApi" Text="" HorizontalAlignment="Left" Margin="20, 20, 20, 2" />
+                <TextBox x:Uid="AddDeviceApiTextBox" x:Name="TextBoxApi" Margin="20, 2" MaxLength="5" PlaceholderText="" />
                 
                 <RelativePanel Margin="20, 30, 20, 2" HorizontalAlignment="Right">
                     <Button x:Uid="AddDeviceSubmit" Grid.Column="1" x:Name="ButtonSubmit" Content="Submit" Width="100" HorizontalAlignment="Right" Margin="0, 0, 20, 0" Click="ButtonSubmit_Click" />
