--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -110,7 +110,7 @@
                                         <Button x:Name="ButtonEdit" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonEdit_Click" Tag="{x:Bind AssetId}"/>
                                         <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonRemove_Click" Tag="{x:Bind AssetId}"/>
                                         <Button x:Name="ButtonDuplicate" Content="&#xE8C8;" FontFamily="Segoe MDL2 Assets" Grid.Column="8" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonDuplicate_Click" Tag="{x:Bind AssetId}"/>
-                                        <ToggleSwitch Grid.Column="9" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" Toggled="ToggleSwitchEnable_Toggled"/>
+                                        <ToggleSwitch Grid.Column="9" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Toggled="ToggleSwitchEnable_Toggled" Padding="5,0" Tag="{x:Bind AssetId}"/>
 
                                     </Grid>
                                 </DataTemplate>
@@ -152,7 +152,7 @@
                                         <Button x:Name="ButtonChange" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonEdit_Click" Tag="{x:Bind AssetId}"/>
                                         <Button x:Name="ButtonRemove" Content="&#xE74D;" FontFamily="Segoe MDL2 Assets" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonRemove_Click" Tag="{x:Bind AssetId}"/>
                                         <Button x:Name="ButtonDuplicate" Content="&#xE8C8;" FontFamily="Segoe MDL2 Assets" Grid.Column="8" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="5,0" FontSize="20" Height="36" Click="ButtonDuplicate_Click" Tag="{x:Bind AssetId}"/>
-                                        <ToggleSwitch Grid.Column="9" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" Toggled="ToggleSwitchEnable_Toggled"/>
+                                        <ToggleSwitch Grid.Column="9" x:Name="ToggleSwitchEnable" IsOn="{x:Bind IsEnabledSwitch}" OnContent="On" OffContent="Off" Padding="5,0" Toggled="ToggleSwitchEnable_Toggled" Tag="{x:Bind AssetId}"/>
 
                                     </Grid>
                                 </DataTemplate>
